algumas alterações no properties.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,20 +1,37 @@
-spring.application.name=TicketSales
-
-server.port=8081
-
 # Configurações do banco de dados
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.username=sa
 spring.datasource.password=
 
+# Configurações do Flyway
+spring.flyway.enabled=true
+spring.flyway.locations=classpath:db/migration
 
 # Configurações do JPA e Hibernate
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
+# Configurações do e-mail
+spring.mail.host=smtp.example.com
+spring.mail.username=user@example.com
+spring.mail.password=password
+spring.mail.port=587
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+
+# Configurações do JWT
+app.security.jwt.secret=your-jwt-secret
+
+# Outras Configurações
+spring.application.name=TicketSales
+server.port=8081
+
 # Configurações do H2 Console
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
-app.security.jwt.secret=12345678
+
+# Perfil ativo
+spring.profiles.active=dev
