--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,8 @@
 # Configurações do banco de dados
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.username=sa
-spring.datasource.password=
-
-# Configurações do Flyway
-spring.flyway.enabled=true
-spring.flyway.locations=classpath:db/migration
+spring.datasource.url=jdbc:mysql://${DB_HOST:localhost}:3306/${DB_NAME:ticketsales}?createDatabaseIfNotExist=true
+spring.datasource.username=${DB_USER:ticketsales_user}
+spring.datasource.password=${DB_PASSWORD:ticketsales_pwd}
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Configurações do JPA e Hibernate
 spring.jpa.hibernate.ddl-auto=update
@@ -13,25 +10,31 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 # Configurações do e-mail
-spring.mail.host=smtp.example.com
-spring.mail.username=user@example.com
-spring.mail.password=password
-spring.mail.port=587
+spring.mail.host=${MAIL_HOST:smtp.example.com}
+spring.mail.username=${MAIL_USERNAME:fa.engeroff1996@gmail.com}
+spring.mail.password=${MAIL_PASSWORD:password}
+spring.mail.port=${MAIL_PORT:587}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
 
 # Configurações do JWT
-app.security.jwt.secret=your-jwt-secret
+app.security.jwt.secret=${JWT_SECRET:12345678}
 
 # Outras Configurações
 spring.application.name=TicketSales
-server.port=8081
-
-# Configurações do H2 Console
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
-
+server.port=${SERVER_PORT:8080}
 
 # Perfil ativo
-spring.profiles.active=dev
+spring.profiles.active=${SPRING_PROFILE:dev}
+
+#Pool de conexão
+spring.datasource.hikari.minimum-idle=25
+spring.datasource.hikari.maximum-pool-size=50
+spring.datasource.hikari.connectionTimeout=10000
+spring.datasource.hikari.idleTimeout=600000
+spring.datasource.hikari.maxLifetime=1800000
+
+#Redis
+spring.redis.host=redis
+spring.redis.port=6379
